FlightPath 6.x Changelog
========================


2022-04-12
  Added extra classes to engagements for text messages, to say which phone number the message was being sent from and to.  This should help with styling if you want
  to have different colors or other styles based on what phone line it was sent to or from.


2022-04-11
  Removed concept of trying to "preload" a set number of courses on login.  This is now handled in a more elegant way.
  
  Added link to schools help page to schools module settings page.
  
  Added "Loading" dialog when you search and receive a single student. 
  
  Changed "Advisee Alerts" tab to say just "Alerts".
  
  Placed all db connection code in settings.php, and put the pdo into GLOBALS, so we only make 1 database connection per page load.
  
  
2022-04-10
  Added more messages on login page for if login failed (admin user is only one allowed, students not allowed, etc).
  

2022-04-04
  Using font awesome question-circle icon for popup_description link instead of regular question mark.  Also used margin to add a little more spacing.
  

2022-04-02
  Adjusted weights to better alphabetize the admin console menu items.

  Added new silk icons to system module directory.

  Added ability to have "pseudo" opt-groups for checkboxes fields, where checkboxes can be grouped
  the same way select lists can, in a multi-dimensional array.
  

2022-03-31
  Added small bit of code to advise.module to stop notice/warning from happening.
  

2022-03-30
  Added extra classes to tabs and sub-tabs to make them targetable by CSS.
  
  Added extra classes to History tab sections to make them more targetable by CSS.
  
  Added extra class to section titles to include machine-readable versions of the title, for CSS.
  
  Similarly added to student files module to make CSS styling easier.
  

2022-03-29
  Fixed a subtle bug where if a course was being advised to take in a group that was split between two different semesters,